manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mavendev-6563a38c-618f-48c0-ab15-46221fdfac9f-deployment
  labels:
    app: mavendev-6563a38c-618f-48c0-ab15-46221fdfac9f
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mavendev-6563a38c-618f-48c0-ab15-46221fdfac9f
  template:
    metadata:
      labels:
        app: mavendev-6563a38c-618f-48c0-ab15-46221fdfac9f
    spec:
      containers:
        - name: mavendev-6563a38c-618f-48c0-ab15-46221fdfac9f-container
          image: pipejet/lyna-mavendev:1
          ports:
            - containerPort: 8080
