manifests/ingress.yaml
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: mavendev-6563a38c-618f-48c0-ab15-46221fdfac9f-ingress
#   namespace: mavendev-6563a38c-618f-48c0-ab15-46221fdfac9f
#   annotation:
# spec:
#   ingressClassName: nginx
#   rules:
#   - host: lyna-mavendev.tinhlgkiddy.fun
#     http:
#       paths:
#       - path: /
#         pathType: Prefix  
#         backend:
#           service:
#             name: mavendev-6563a38c-618f-48c0-ab15-46221fdfac9f-service 
#             port:
#               number: 8085
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mavendev-6563a38c-618f-48c0-ab15-46221fdfac9f-https-ingress
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
    nginx.ingress.kubernetes.io/use-regex: "true"
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - lyna-mavendev.tinhlgkiddy.fun
      secretName: mavendev-6563a38c-618f-48c0-ab15-46221fdfac9f-secret-tls
  rules:
    - host: lyna-mavendev.tinhlgkiddy.fun
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mavendev-6563a38c-618f-48c0-ab15-46221fdfac9f-service 
                port:
                  number: 8085
